# CppSkillDemonstrator

./: CMakeLists.txt  README.md  adtAsciiArtLogo.txt  setup.sh
include/RevenueModel/CustomerSegment/: CustomerSegment.h
src/: main.cpp
src/RevenueModel/CustomerSegment/: CustomerSegment.cpp
tests/: CMakeLists.txt
